<resources>
    <string name="app_name">EntrenApp_P1</string>
    <string name="title_activity_menu_principal">menu_principalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre_app">ENTRENAPP</string>
    <string name="slogan_app">Que comience el juego...</string>
    <string name="pregunta_user">¿Qué parte trabajarás hoy?</string>
    <string name="txt_donde_ejercicio_casa">Hoy te ejercitarás desde casa</string>
    <string name="txt_donde_ejercicio_gym">Hoy te ejercitarás desde el gym</string>
    <string name="txt_principiante">Principiante</string>
    <string name="txt_experto">Experto</string>
    <string name="txt_seleccionaNivel">Selecciona tu nivel:</string>
    <string name="descripcion_btn_sup_gym">btn_gympartSup</string>
    <string name="parte_superior_gym">Parte Superior (GYM)</string>
    <string name="nivel">Nivel:</string>
    <string name="consejo1">¡No olvides siempre iniciar con calentamiento y terminar con estiramiento!</string>
    <string name="parte_superior_casa">Parte Superior (Casa)</string>
    <string name="title_activity_calentamiento_casa_experto">calentamiento_casa_expertoActivity
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="contenedor">Contenedor</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="nivel_experto">Nivel: Experto</string>
    <string name="boton_gym">boton_gym</string>
    <string name="btn_gym_sup_parte">btn_gym_sup_parte</string>
    <string name="boton_de_ayuda">boton de ayuda</string>
    <string name="boton_parte_inferior_gym">boton parte inferior gym</string>
    <string name="nivel_principiante">Nivel: Principiante</string>
    <string name="parte_inferior_gym">Parte Inferior (GYM)</string>
    <string name="title_activity_ej5gym_experto">ej5gym_expertoActivity</string>
    <string name="ejercicios_para_calentamiento_en_casa">Ejercicios para calentamiento en casa</string>
    <string name="ejercicios_para_calentamiento_en_gym">Ejercicios para calentamiento en gym</string>
    <string name="ejercicios_para_espalda_en_casa">Ejercicios para espalda en casa</string>
    <string name="ejercicios_para_cu_driceps_en_casa">Ejercicios para cuádriceps en casa</string>
    <string name="ejercicios_para_espalda_en_gym">Ejercicios para espalda en gym</string>
    <string name="ejercicios_para_cu_driceps_en_gym">Ejercicios para cuádriceps en gym</string>
    <string name="ejercicios_para_pecho_en_casa">Ejercicios para pecho en casa</string>
    <string name="ejercicios_para_hombros_en_gym">Ejercicios para hombros en gym</string>
    <string name="ejercicios_para_pecho_en_gym">Ejercicios para pecho en gym</string>
    <string name="ejercicios_para_femorales_en_casa">Ejercicios para femorales en casa</string>
    <string name="ejercicios_para_hombros_en_casa">Ejercicios para hombros en casa</string>
    <string name="ejercicios_para_gl_teos_en_casa">Ejercicios para glúteos en casa</string>
    <string name="ejercicios_para_gl_teos_en_gym">Ejercicios para glúteos en gym</string>
    <string name="ejercicios_para_abdomen_en_casa">Ejercicios para abdomen en casa</string>
    <string name="ejercicios_para_pantorilla_en_casa">Ejercicios para pantorilla en casa</string>
    <string name="ejercicios_para_abdomen_en_gym">Ejercicios para abdomen en gym</string>
    <string name="ejercicios_para_pantorilla_en_gym">Ejercicios para pantorilla en gym</string>
    <string name="ejercicios_para_biceps_en_casa">Ejercicios para biceps en casa</string>
    <string name="ejercicios_para_estiramiento_en_casa">Ejercicios para estiramiento en casa</string>
    <string name="ejercicios_para_biceps_en_gym">Ejercicios para biceps en gym</string>
    <string name="ejercicios_para_estiramiento_en_gym">Ejercicios para estiramiento en gym</string>
    <string name="ejercicios_para_triceps_en_casa">Ejercicios para triceps en casa</string>
    <string name="ejercicios_para_triceps_en_gym">Ejercicios para triceps en gym</string>
    <string name="ejercicios_para_femorales_en_gym">Ejercicios para femorales en gym</string>
</resources>