<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".selecc_parte_casaActivity"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_donde_ejercicio_casa"
            android:fontFamily="@font/bowlby_one"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#FFEE5D"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_seleccionaNivel"
            android:fontFamily="@font/bowlby_one"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#FFEE5D"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:text="@string/txt_principiante"
                android:textColor="#FFEE5D"
                android:fontFamily="@font/bowlby_one"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:text="@string/txt_experto"
                android:textColor="#FFEE5D"
                android:fontFamily="@font/bowlby_one"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_user"
            android:fontFamily="@font/bowlby_one"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#FFEE5D"/>

        <ImageButton
            android:id="@+id/btn_casa_pSup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/part_superior"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/btn_gym_sup_parte"
            android:onClick="AbrirParteSupCasa"
            />

        <ImageButton
            android:id="@+id/btn_casa_pInf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/part_inferior"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/boton_gym"
            android:onClick="AbrirParteInfCasa"
            />

        <ImageButton
            android:id="@+id/btn_ayuda"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/boton_de_ayuda"
            android:src="@drawable/ayuda" />


    </LinearLayout>

</ScrollView>

