<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejercicios_inferior_gymActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Parte Inferior (Casa)"
        android:fontFamily="@font/bowlby_one"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#FFEE5D"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nivel"
        android:fontFamily="@font/bowlby_one"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="#FFEE5D"/>

    <TextView
        android:id="@+id/txt_nivel_inf_casa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="..."
        android:fontFamily="@font/bowlby_one"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="#FFEE5D"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <TableRow>
            <ImageButton
                android:id="@+id/btn_calentamiento_casa_inf"
                android:layout_column="1"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:src="@drawable/calentamiento"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/descripcion_btn_sup_gym"/>
            <ImageButton
                android:layout_column="2"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:src="@drawable/espalda"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/descripcion_btn_sup_gym"/>
        </TableRow>
        <TableRow>
            <ImageButton
                android:layout_column="1"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:src="@drawable/pecho"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/descripcion_btn_sup_gym"/>
            <ImageButton
                android:layout_column="2"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:src="@drawable/hombros"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/descripcion_btn_sup_gym"/>
        </TableRow>
        <TableRow>
            <ImageButton
                android:layout_column="1"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:src="@drawable/abdomen"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/descripcion_btn_sup_gym"/>
            <ImageButton
                android:layout_column="2"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:src="@drawable/biceps"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/descripcion_btn_sup_gym"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bowlby_one"
            android:text="@string/consejo1"
            android:textSize="13sp"
            android:gravity="center"
            android:textColor="#FFEE5D"
            />

        <ImageView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:src="@drawable/maquina"/>

    </LinearLayout>

</LinearLayout>